Fix styling of `.cssColumns .bookmarkColumn` to align with table view.
Removed fixed width and adjusted padding to dynamically handle bookmark column width, making it behave similarly to the table layout.

--- a/main.css
+++ b/main.css
@@ -131,8 +131,7 @@ body:not(.edit-mode) .edit-link {
 }
 
 .cssColumns .bookmarkColumn {
-        width: 18em;
-        margin-right: 2em;
+        padding-right: 1em;
         display: flex;
         flex-direction: column;
 }
